# micromouse_simulation

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
include/: console.h  console.hpp  diagonal_solver.hpp  direction.h  direction.hpp  maze.h  maze.hpp  mouse.h  point.h  solver.h  solver.hpp
include/solver/: simple_solver.hpp
lib/: gui_window_file_dialog.h
mazes/: 2011_All_Japan.maz  2012_Taiwan_International.maz  2023_All_Japan.maz  2023_All_Japan_2.maz  APEC 2011.maz
resources/: 2011_All_Japan.maz  2012_Taiwan_International.maz  2023_All_Japan.maz  2023_All_Japan_2.maz  APEC_2011.maz  APEC_2025.maz  Veritasium_Sample_1.maz  Veritasium_Sample_2.maz  Veritasium_Sample_3.maz
src/: console.cpp  diagonal_solver.cpp  direction.cpp  main.cpp  maze.cpp  mouse.cpp  point.cpp  solver.cpp
src/solver/: diagonal_solver.cpp  simple_solver.cpp
